src/objects/Focus_Farmer__c.object
<CustomObject>
    <fields>
        <fullName>Age__c</fullName>
        <label>Age</label>
        <picklist>
            <picklistValues>
                <fullName>Less than 18 years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18 to 30 years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>31 to 50 years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>51 to 60 years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Over 60 years</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>District__c</fullName>
        <label>District</label>
        <picklist>
            <picklistValues>
                <fullName>Kasese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Masindi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bushenyi</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Farmer_Type__c</fullName>
        <label>Farmer Type</label>
        <picklist>
            <picklistValues>
                <fullName>Banana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coffee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maize</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Highest_Education_Level_Attained__c</fullName>
        <label>Highest Education Level Attained</label>
        <picklist>
            <picklistValues>
                <fullName>No formal education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Some primary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Primary completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Some secondary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed O”level</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A’Level</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tertiary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>University degree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Marital_Status__c</fullName>
        <label>Marital Status</label>
        <picklist>
            <picklistValues>
                <fullName>Married</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unmarried (living together)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Single</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Divorced or separated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Widowed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PPI_Score__c</fullName>
        <label>PPI Score</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Parish__c</fullName>
        <label>Parish</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Person__c</fullName>
        <label>Person</label>
        <referenceTo>Person__c</referenceTo>
        <relationshipLabel>Focus Farmers</relationshipLabel>
        <relationshipName>Focus_Farmers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Position_in_Household__c</fullName>
        <label>Position in Household</label>
        <picklist>
            <picklistValues>
                <fullName>Household head</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spouse to head</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Son/daughter to head</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Subcounty__c</fullName>
        <label>Subcounty</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Village_LC1__c</fullName>
        <label>Village/LC1</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <label>Focus Farmer</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>FFN{YYYY}{MM}{DD}{0}</displayFormat>
        <label>Focus Farmer Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Focus Farmers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>